--- a/website/html/wallets.html
+++ b/website/html/wallets.html
@@ -85,7 +85,8 @@
                 <form class="size-8" method="PUT" action="/wallets">
                     <input class="hidden" type="text" value="{{ .Id }}"
                            name="id" />
-                    <input class="hidden" type="text" value="5" name="status" />
+                    <input class="hidden" type="text" value="cancel_scheduled"
+                           name="status" />
                     <button class="size-8 rounded-lg hover:bg-gray-200"
                             data-spinner="w-4">
                         <svg class="p-1.5" xmlns="http://www.w3.org/2000/svg"
@@ -100,7 +101,8 @@
                 <form class="size-8" method="PUT" action="/wallets">
                     <input class="hidden" type="text" value="{{ .Id }}"
                            name="id" />
-                    <input class="hidden" type="text" value="0" name="status" />
+                    <input class="hidden" type="text" value="queued"
+                           name="status" />
                     <button class="size-8 rounded-lg hover:bg-gray-200 disabled:text-gray-400 disabled:hover:bg-inherit"
                             data-spinner="w-4"
                             {{ if eq .Status "cancel_scheduled" }} disabled
@@ -131,8 +133,9 @@
                 </form>
                 <button class="size-8 rounded-lg hover:bg-gray-200 min-[470px]:hidden"
                         data-wallet-table-expand="{{ .Id }}">
-                    <svg class="p-1.5 transition-all" xmlns="http://www.w3.org/2000/svg"
-                         fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    <svg class="p-1.5 transition-all"
+                         xmlns="http://www.w3.org/2000/svg" fill="none"
+                         viewBox="0 0 24 24" stroke-width="1.5"
                          stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round"
                               d="m19.5 8.25-7.5 7.5-7.5-7.5" />
